--- a/section-07-ci-and-publishing/model-package/tox.ini
+++ b/section-07-ci-and-publishing/model-package/tox.ini
@@ -93,3 +93,7 @@ commands =
 [flake8]
 exclude = .git,env
 max-line-length = 90
+
+[pytest]
+filterwarnings =
+    ignore:np.find_common_type is deprecated
