updates to tox.ini and predic/core.py

--- a/section-07-ci-and-publishing/model-package/tox.ini
+++ b/section-07-ci-and-publishing/model-package/tox.ini
@@ -96,4 +96,4 @@ max-line-length = 90
 
 [pytest]
 filterwarnings =
-    ignore:np.find_common_type is deprecated
+    ignore:np.find_common_type is deprecated:DeprecationWarning
