put the deprecation warning suppressor to commands

--- a/section-07-ci-and-publishing/model-package/tox.ini
+++ b/section-07-ci-and-publishing/model-package/tox.ini
@@ -36,6 +36,7 @@ commands=
 	pytest \
 	-s \
 	-vv \
+    -Wi::DeprecationWarning \
 	{posargs:tests/}
 
 [testenv:train]
@@ -93,7 +94,3 @@ commands =
 [flake8]
 exclude = .git,env
 max-line-length = 90
-
-[pytest]
-filterwarnings =
-    ignore:np.find_common_type is deprecated:DeprecationWarning
